# docker-images

./: .flake8  .gitattributes  .gitignore  .hadolint.yaml  .markdownlint.yaml  .patchable  .pre-commit-config.yaml  .pylintrc  .yamllint.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.adoc  README.md  boil.toml  build_product_images.py  conf.py  deny.toml  enumerate-product-versions.py  enumerate.py  gen_actions_table.sh  patchable.nu  renovate.json  shell.nix  update_feature_tracker_db.sh  update_readme_badges.sh  upload_new_async-profiler_version.sh  upload_new_inotify-tools_version.sh  upload_new_jmx_exporter_version.sh  upload_new_kcat_version.sh  upload_new_protoc_version.sh  upload_new_statsd_exporter_version.sh  upload_new_tini_version.sh  upload_sig_storage_driver.sh
.cargo/: config.toml
.github/: actionlint.yaml  dependabot.yml  docker.yml  pull_request_template.md
.scripts/: enumerate-product-versions.py  get_manifest_digest.sh  get_repo_digest.sh  get_repo_name.sh  release_boil.sh  update_feature_tracker_db.sh  update_readme_badges.sh  upload_new_async-profiler_version.sh  upload_new_boost_version.sh  upload_new_inotify-tools_version.sh  upload_new_jmx_exporter_version.sh  upload_new_kcat_version.sh  upload_new_keycloak_version.sh  upload_new_maven_version.sh  upload_new_nodejs_version.sh  upload_new_nvm_version.sh  upload_new_protoc_version.sh  upload_new_statsd_exporter_version.sh  upload_new_tini_version.sh  upload_sig_storage_driver.sh  watch-builds.sh
airflow/: CHANGELOG.md  Dockerfile  README.md  boil-config.toml  constraints-2.2.3-python38.txt  constraints-2.2.4-python39.txt  constraints-2.2.5-python39.txt  constraints-2.6.1-python39.txt  constraints-2.6.3-python39.txt  constraints-2.7.1-python39.txt  constraints-2.7.2-python39.txt  constraints-2.8.1-python39.txt  download_constraints.sh  versions.py  versions.toml
airflow/opa-auth-manager/: .gitignore  README.md  pyproject.toml
airflow/opa-auth-manager/airflow-2/: README.md  pyproject.toml
airflow/opa-auth-manager/airflow-2/opa_auth_manager/: opa_fab_auth_manager.py
airflow/opa-auth-manager/airflow-2/tests/: test_opa_fab_auth_manager.py
airflow/opa-auth-manager/airflow-3/: README.md  pyproject.toml
airflow/opa-auth-manager/airflow-3/opa_auth_manager/: opa_fab_auth_manager.py
airflow/opa-auth-manager/airflow-3/tests/: test_opa_fab_auth_manager.py
airflow/opa-auth-manager/opa_auth_manager/: opa_fab_auth_manager.py
airflow/opa-auth-manager/tests/: test_opa_fab_auth_manager.py
antora/: Dockerfile
druid/: CHANGELOG.md  Dockerfile  README.md  boil-config.toml  upload_new_druid_version.sh  versions.py  versions.toml
edc/: Dockerfile  README.md
hadoop/: CHANGELOG.md  Dockerfile  boil-config.toml  hdfs-utils-hadoop-3.4.1-pom.xml  upload_new_hadoop_version.sh  versions.py  versions.toml
hbase/: CHANGELOG.md  Dockerfile  Dockerfile.entrypoint  README.md  boil-config.toml  build_new_hbase-operator-tools_version.sh  build_new_phoenix_version.sh  upload_new_hbase-operator-tools_version.sh  upload_new_hbase_version.sh  upload_new_phoenix_version.sh  versions.py  versions.toml
hello-world/: Dockerfile  README.md  versions.py  versions.toml
hive/: CHANGELOG.md  Dockerfile  README.md  boil-config.toml  upload_new_hive_version.sh  upload_new_postgres_driver_version.sh  versions.py  versions.toml
image_tools/: __init__.py  args.py  bake.py  conf.py  lib.py  preflight.py
java-base/: CHANGELOG.md  Dockerfile  boil-config.toml  versions.py
java-devel/: Dockerfile  boil-config.toml  versions.py  versions.toml
jdk-base/: Dockerfile  boil-config.toml  versions.py
kafka/: CHANGELOG.md  Dockerfile  boil-config.toml  kubernetes.repo  upload_new_kafka_version.sh  versions.py  versions.toml
kafka-testing-tools/: Dockerfile  boil-config.toml  versions.py
kcat/: Dockerfile  README.md  versions.py  versions.toml
krb5/: Dockerfile  README.adoc  README.md  boil-config.toml  versions.py  versions.toml
krb5-testing-tools/: README.md
nginx/: Dockerfile  README.md
nifi/: CHANGELOG.md  Dockerfile  TODO.md  boil-config.toml  upload_new_nifi_version.sh  versions.py  versions.toml
nix/: sources.json
node-exporter/: Dockerfile
omid/: Dockerfile  boil-config.toml  upload_new_omid_version.sh  versions.py  versions.toml
opa/: CHANGELOG.md  Dockerfile  boil-config.toml  upload_new_opa_version.sh  versions.py  versions.toml
opensearch/: Dockerfile  README.md  boil-config.toml  versions.py
opensearch-dashboards/: Dockerfile  README.md  boil-config.toml  versions.py
patchable/: Cargo.toml
prometheus/: Dockerfile
pyspark-k8s/: CHANGELOG.md  Dockerfile
rust/boil/: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  cliff.toml
rust/boil/src/: cli.rs  config.rs  constants.rs  main.rs  utils.rs
rust/boil/src/cli/: build.rs  completions.rs  image.rs  mod.rs
rust/boil/src/cmd/: build.rs  completions.rs  image.rs  mod.rs
rust/boil/src/completions/: mod.rs
rust/boil/src/core/: bakefile.rs  docker.rs  image.rs  mod.rs
rust/boil/src/models/: mod.rs
rust/boil/src/show/: images.rs  mod.rs
rust/boil/src/show/images/: cli.rs  mod.rs
rust/patchable/: Cargo.toml  README.md
rust/patchable/src/: main.rs  patch.rs  patch_mail.rs  repo.rs  utils.rs
shared/: copy_artifacts.sh  log4j.txt  (+2 more)
superset/stackable/opa-authorizer/: .gitignore  README.md  pyproject.toml  pytest.ini
superset/stackable/opa-authorizer/opa_authorizer/: opa_manager.py
superset/stackable/opa-authorizer/tests/: opa_manager_test.py
superset/stackable/superset-openlineage/: README.md  pyproject.toml
superset/stackable/superset-openlineage/superset_openlineage/: __init__.py  client.py  context.py  event_logger.py  facets.py  jobname.py  lifecycle.py  lineage.py  naming.py  query_logger.py  settings.py
superset/stackable/superset-openlineage/superset_openlineage/tests/: test_client.py  test_context.py  test_end_to_end.py  test_event_logger.py  test_jobname.py  test_lifecycle.py  test_lineage_columns.py  test_lineage_outputs.py  test_lineage_tables.py  test_naming.py  test_openlineage_api.py  test_query_logger.py
(+1525 files in other folders)
