[tool.poetry]
name = "opa-auth-manager"
version = "0.1.0"
description = ""
authors = ["Siegfried Weber <mail@siegfriedweber.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"

[tool.poetry.group.dev.dependencies]
apache-airflow = "^2.10.3"
pylint = "^3.3.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
