[package]
name = "boil"
version = "0.0.1"
edition = "2024"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
git2.workspace = true
glob.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
strum.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true
