[package]
name = "boil"
version = "0.1.4" # Managed by .scripts/release_boil.sh
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
cap-std.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
git2.workspace = true
glob.workspace = true
oci-spec.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
strum.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
rstest.workspace = true
