[package]
name = "boil"
version = "0.2.3-rc.1" # Managed by .scripts/release_boil.sh
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
cap-std.workspace = true
# We use the unstable-markdown feature to get proper markdown list rendering.
# See tracking issue: https://github.com/clap-rs/clap/issues/5900
clap = { workspace = true, features = ["unstable-markdown"] }
clap_complete.workspace = true
clap_complete_nushell.workspace = true
git2.workspace = true
glob.workspace = true
humansize.workspace = true
oci-spec.workspace = true
reqwest.workspace = true
regex.workspace = true
secrecy.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
strum.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
