[package]
name = "patchable"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
git2.workspace = true
serde.workspace = true
snafu.workspace = true
tempfile.workspace = true
time.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
