[package]
name = "patchable"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
clap.workspace = true
git2.workspace = true
serde.workspace = true
snafu.workspace = true
tempfile.workspace = true
time.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
