[project]
name = "opa-auth-manager"
version = "0.1.0"
description = "Auth manager for Airflow which delegates the authorization to an Open Policy Agent"
authors = [
    { name = "Siegfried Weber", email="mail@siegfriedweber.net"},
    { name = "Razvan Daniel Mihai", email="razvan.mihai@stackable.tech"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"

dependencies = [
    "requests~=2.32.3",
    "cachetools~=5.5.0",
    "overrides~=7.7.0"
]

[dependency-groups]
dev = [
    "apache-airflow~=2.9.3",
    "pylint~=3.3.1",
    "pytest~=8.3.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
