[tool.poetry]
name = "opa-authorizer"
version = "0.1.0"
description = ""
authors = ["Benedikt Labrenz <benedikt.labrenz@stackable.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
cachetools = "^5.5.0"
overrides = "^7.7.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
apache-superset = "~4.0"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
