[project]
name = "opa-authorizer"
version = "0.1.0"
description = "Auth manager for Superse t which delegates the authorization to an Open Policy Agent"
authors = [{ name = "Benedikt Labrenz", email = "benedikt.labrenz@stackable.tech" }]
requires-python = ">=3.9.0,<3.13"
readme = "README.md"
dependencies = ["cachetools>=5.5.0,<6", "overrides>=7.7.0,<8"]

[dependency-groups]
dev = ["pylint>=3.3.1,<4", "apache-superset>=4.0,<4.1"]
test = ["pytest-mock>=3.10.0,<4", "pytest>=8.3.3,<9"]

[tool.uv]
default-groups = ["dev", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
