[tool.poetry]
name = "opa-authorizer"
version = "0.1.0"
description = ""
authors = ["Benedikt Labrenz <benedikt.labrenz@stackable.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
# Keep in sync with the python-version build arguments in superset/boil-config.toml
python = ">=3.11,<3.13"
cachetools = "^5.5.0"
overrides = "^7.7.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
# Only used to run the tests against. Superset 4.x pins numpy==1.23.5, which cannot
# be installed on Python 3.12, so this must stay >= 5.0 as long as we build with 3.12.
apache-superset = "~6.1"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
